--- a/.github/workflows/vol-api-build-deploy.yml
+++ b/.github/workflows/vol-api-build-deploy.yml
@@ -79,9 +79,9 @@ jobs:
        echo 'Run unit tests'
        ls -la ./
 
-  build-and-push-image:
+  build-test-push-sign-image:
 
-    name: Build & Push Docker Image
+    name: Build, Test, Push & Sign Image
     runs-on: ubuntu-latest
     needs:
     - build
@@ -109,13 +109,17 @@ jobs:
         echo "BASE_IMAGE=${BASE_IMAGE#* }" >> $GITHUB_ENV
 
     - name: Set VOL_API_IMAGE_TAG at PR level
+      id: pr-image-tag
       run: |
         echo "VOL_API_IMAGE_TAG=pr-approved-vol-api-${BASE_IMAGE#*:}-$IMAGE_SHA" >> $GITHUB_ENV
+        echo "::set-output name=pr_image_tag::${VOL_API_IMAGE_TAG}"
 
     - name: Set VOL_API_IMAGE_TAG at mainline
+      id: main-image-tag
       if: github.ref == 'refs/heads/main'
       run: |
         echo "VOL_API_IMAGE_TAG=approved-vol-api-${BASE_IMAGE#*:}-$IMAGE_SHA" >> $GITHUB_ENV
+        echo "::set-output name=main_image_tag::${VOL_API_IMAGE_TAG}"
 
     - name: Setup Notation CLI
       uses: notaryproject/notation-action/setup@v1
@@ -183,22 +187,26 @@ jobs:
     # #    echo 'Deployment in process...'
     # #    sleep 10s
 
+  deploy-on-ephemral-cluster:
+
+    name: Deploy on Ephmeral Cluster
+    runs-on: ubuntu-latest
+    needs:
+    - build-test-push-sign-image
+
+    steps:
+  
+    - name: Trigger workflow 'nonprod-vol-api-manual-cd'
+      if: github.event_name == 'pull_request'
+      run: |
+        echo "${{ jobs.build-test-push-sign-image.steps.pr-image-tag.outputs.pr_image_tag }}"
+
   automation-tests:
 
     name: Run Automation Tests
     runs-on: ubuntu-latest
     needs:
-    - build-and-push-image
-
-    env:
-      AWS_REGION : ${{ vars.DVSA_AWS_REGION }}
-      AWS_ACCOUNT_ID_VOL_NP_TOOLING: ${{ vars.VOL_AWS_ACCOUNT_TOOLING_NONPROD }}
-      REPO_NAME: ${{vars.AWS_ECR_NP_VOLTOOLING_REPONAME}}
-      AWS_ACCOUNT_ID_SHAREDCOREECR: ${{ vars.AWS_ACCOUNT_ID_SHAREDCOREECR }}
-
-    permissions:
-      id-token: write   # This is required for requesting the JWT
-      contents: read    # This is required for actions/checkout
+    - deploy-on-ephemral-cluster
 
     steps:
 
