--- a/.github/workflows/vol-api-build-deploy.yml
+++ b/.github/workflows/vol-api-build-deploy.yml
@@ -79,7 +79,7 @@ jobs:
        echo 'Run unit tests'
        ls -la ./
 
-  build-test-push-sign-image:
+  build_test_push_sign_image:
 
     name: Build, Test, Push & Sign Image
     runs-on: ubuntu-latest
@@ -109,7 +109,7 @@ jobs:
         echo "BASE_IMAGE=${BASE_IMAGE#* }" >> $GITHUB_ENV
 
     - name: Set VOL_API_IMAGE_TAG at PR level
-      id: pr-image-tag
+      id: pr_image_tag
       run: |
         echo "VOL_API_IMAGE_TAG=pr-approved-vol-api-${BASE_IMAGE#*:}-$IMAGE_SHA" >> $GITHUB_ENV
         echo "::set-output name=pr_image_tag::${VOL_API_IMAGE_TAG}"
@@ -192,14 +192,14 @@ jobs:
     name: Deploy on Ephmeral Cluster
     runs-on: ubuntu-latest
     needs:
-    - build-test-push-sign-image
+    - build_test_push_sign_image
 
     steps:
   
     - name: Trigger workflow 'nonprod-vol-api-manual-cd'
       if: github.event_name == 'pull_request'
       run: |
-        echo "${{ jobs.build-test-push-sign-image.steps.pr-image-tag.outputs.pr_image_tag }}"
+        echo "${{ jobs.build_test_push_sign_image.steps.pr_image_tag.outputs.pr_image_tag }}"
 
   automation-tests:
 
