--- a/.github/workflows/vol-api-build-deploy.yml
+++ b/.github/workflows/vol-api-build-deploy.yml
@@ -202,8 +202,21 @@ jobs:
   
     - name: Trigger workflow 'nonprod-vol-api-manual-cd'
       if: github.event_name == 'pull_request'
-      run: |
-        echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
+      # run: |
+      #   echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
+      uses: actions/github-script@v6.4.1
+      with:
+        github-token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
+        script: |
+          await github.rest.actions.createWorkflowDispatch({
+          owner: 'dvsa'
+          repo: 'vol-terraform',
+          workflow_id: 'nonprod-vol-api-manual-cd.yaml',
+          ref: 'feature/AWSRESET1-514'
+          inputs: {
+            vol_api_image_tag: ${{ needs.build-test-push-sign-image.outputs.image_tag }}
+          }
+          })
 
   automation-tests:
 
