--- a/.github/workflows/qa-vol-api-approval.yml
+++ b/.github/workflows/qa-vol-api-approval.yml
@@ -1,18 +1,17 @@
-name: CI/CD NON PROD VOL API
-run-name: CI/CD NON PROD VOL API
+name: QA VOL API ARTIFACT APPROVAL
+run-name: QA VOL API ARTIFACT APPROVAL
 
 on:
-  pull_request:
-    # types: ['labeled']
-    # push:
-    branches:
-      - master
+  workflow_dispatch:
+    inputs:
+      vol_api_image_tag:
+        description: 'Tag of VOL API Image'     
+        required: true
 
 env:
   AWS_REGION : ${{ vars.DVSA_AWS_REGION }}
   AWS_ACCOUNT_ID_VOL_NP_TOOLING: ${{ vars.VOL_AWS_ACCOUNT_TOOLING_NONPROD }}
   VOL_NONPROD_TOOLING_REPO_NAME: ${{vars.AWS_ECR_NP_VOLTOOLING_REPONAME}}
-  AWS_ACCOUNT_ID_SHAREDCOREECR: ${{ vars.AWS_ACCOUNT_ID_SHAREDCOREECR }}
 
 # Permission can be added at job level or workflow level    
 permissions:
@@ -21,64 +20,50 @@ permissions:
 
 jobs:
 
-  dockerfile-lint-check:
-    name: Dockerfile Lint Check
-    if: github.event_name == 'pull_request'
-    uses: ./.github/workflows/docker-hadolint.yaml
+  validate-nonprod-vol-api-image:
+    name: Validate VOL API Image
+    uses: ./.github/workflows/image-sign-validation.yaml
+    secrets:
+      aws_role_arn: ${{ secrets.DVSA_AWS_ROLE_SHAREDCORECR }}
+      ecr_tagged_image: ${AWS_ACCOUNT_ID_VOL_NP_TOOLING}.dkr.ecr.${AWS_REGION}.amazonaws.com/${VOL_NONPROD_TOOLING_REPO_NAME}:${{ github.event.inputs.vol_api_image_tag }}
 
-  # build:
+  deploy-on-ephemral-cluster:
 
-  #   name: Build VOL API
-  #   runs-on: ubuntu-latest
+    name: Deploy on Ephmeral Cluster
+    runs-on: ubuntu-latest
+    needs:
+    - build-test-push-sign-image
 
-  #   steps:
-
-  #   - name: Checkout the repository to this runner
-  #     uses: actions/checkout@v3
-
-  #   ##create s3 bucket in vol-non-prod tooling and vol-prod tooling to get the composer
-  #   - name: Download the compose file
-  #     run: |
-  #       php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-  #       php composer-setup.php --install-dir=/usr/local/bin --filename=composer
-  #       php -r "unlink('composer-setup.php');"
-
-  #   - name: Install Composer dependencies
-  #     run: |
-  #      composer install --optimize-autoloader --no-interaction --no-dev
-
-  #   - name: Build VOL Backend
-  #     run: |
-  #      date > config/version
-  #      git describe --all >> config/version
-  #      tar cvzf backend.tar.gz --exclude=config/autoload/local.php --exclude=config/autoload/local.php.dist composer.lock init_autoloader.php config module public data/autoload data/cache vendor
-  #      ls -la
-  #      echo $PWD
-
-  #   - name: Upload VOL API artifact
-  #     uses: actions/upload-artifact@v3.1.3
-  #     with:
-  #       name: Backend
-  #       path: ./backend.tar.gz
-
-  # unit-tests:
-
-  #   name: Run Unit Tests
-  #   runs-on: ubuntu-latest
-  #   # needs:
-  #   # - build
-
-  #   steps:
-
-  #   - name: Checkout the repository to this runner
-  #     uses: actions/checkout@v3
-
-  #   - name: Run unit tests
-  #     # if: github.event_name == 'pull_request'
-  #     run: |
-  #      echo 'Run unit tests'
-  #      ls -la ./
-
+    steps:
+  
+    - name: Trigger workflow 'nonprod-vol-api-manual-cd'
+      if: github.event_name == 'pull_request'
+      run: |
+        echo "Here: ${{ github.event.inputs.vol_api_image_tag }}"
+      # uses: actions/github-script@v6.4.1
+      # with:
+      #   github-token: ${{ secrets.GITHUB_TOKEN }}
+      #   script: |
+      #     await github.rest.actions.createWorkflowDispatch({
+      #       owner: 'dvsa',
+      #       repo: 'dvsa-container-registry',
+      #       workflow_id: 'workflows/nonprod-vol-api-manual-cd.yaml',
+      #       ref: 'feature/AWSRESET1-514',
+      #       inputs: {
+      #         vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
+      #       },
+      #     });
+      #             # script: |
+      #   #   await github.rest.actions.createWorkflowDispatch({
+      #   #   owner: 'dvsa'
+      #   #   repo: 'dvsa-container-registry',
+      #   #   workflow_id: 'nonprod-vol-api-manual-cd.yaml',
+      #   #   ref: 'feature/AWSRESET1-514'
+      #   #   inputs: {
+      #   #     vol_api_image_tag: ${{ needs.build-test-push-sign-image.outputs.image_tag }}
+      #   #   }
+      #   #   })  
+  
   # build-test-push-sign-image:
 
   #   name: Build, Push & Sign Image
@@ -189,80 +174,6 @@ jobs:
   #   outputs:
   #     image_tag: ${{ steps.push-image.outputs.image_tag }}
   #     # main_image_tag: ${{ steps.main-image-tag.outputs.main_image_tag }}
-
-
-  # deploy-on-ephemral-cluster:
-
-  #   name: Deploy on Ephmeral Cluster
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #   - build-test-push-sign-image
-
-  #   steps:
-  
-  #   - name: Trigger workflow 'nonprod-vol-api-manual-cd'
-  #     if: github.event_name == 'pull_request'
-  #     run: |
-  #       echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
-  #     # uses: actions/github-script@v6.4.1
-  #     # with:
-  #     #   github-token: ${{ secrets.GITHUB_TOKEN }}
-  #     #   script: |
-  #     #     await github.rest.actions.createWorkflowDispatch({
-  #     #       owner: 'dvsa',
-  #     #       repo: 'dvsa-container-registry',
-  #     #       workflow_id: 'workflows/nonprod-vol-api-manual-cd.yaml',
-  #     #       ref: 'feature/AWSRESET1-514',
-  #     #       inputs: {
-  #     #         vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
-  #     #       },
-  #     #     });
-  #     #             # script: |
-  #     #   #   await github.rest.actions.createWorkflowDispatch({
-  #     #   #   owner: 'dvsa'
-  #     #   #   repo: 'dvsa-container-registry',
-  #     #   #   workflow_id: 'nonprod-vol-api-manual-cd.yaml',
-  #     #   #   ref: 'feature/AWSRESET1-514'
-  #     #   #   inputs: {
-  #     #   #     vol_api_image_tag: ${{ needs.build-test-push-sign-image.outputs.image_tag }}
-  #     #   #   }
-  #     #   #   })
-
-  artifact-by-qa-approval:
-
-    name: VOL API Image approval by QA
-    runs-on: ubuntu-latest
-  #   needs:
-  #   - build-test-push-sign-image
-    steps:
-  
-    - name: Trigger workflow 'nonprod-vol-api-manual-cd'
-      if: github.event_name == 'pull_request'
-      # run: |
-      #   echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
-      uses: actions/github-script@v6.4.1
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          await github.rest.actions.createWorkflowDispatch({
-            owner: 'dvsa',
-            repo: 'olcs-backend',
-            workflow_id: 'workflows/qa-vol-api-approval.yaml',
-            ref: 'feature/AWSRESET1-514',
-            inputs: {
-              vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
-            },
-          });
-      #             # script: |
-      #   #   await github.rest.actions.createWorkflowDispatch({
-      #   #   owner: 'dvsa'
-      #   #   repo: 'dvsa-container-registry',
-      #   #   workflow_id: 'nonprod-vol-api-manual-cd.yaml',
-      #   #   ref: 'feature/AWSRESET1-514'
-      #   #   inputs: {
-      #   #     vol_api_image_tag: ${{ needs.build-test-push-sign-image.outputs.image_tag }}
-      #   #   }
-      #   #   })
 
   # automation-tests:
 
