--- a/.github/workflows/qa-vol-api-approval.yml
+++ b/.github/workflows/qa-vol-api-approval.yml
@@ -11,7 +11,8 @@ on:
 env:
   AWS_REGION : ${{ vars.DVSA_AWS_REGION }}
   AWS_ACCOUNT_ID_VOL_NP_TOOLING: ${{ vars.VOL_AWS_ACCOUNT_TOOLING_NONPROD }}
-  VOL_NONPROD_TOOLING_REPO_NAME: ${{vars.AWS_ECR_NP_VOLTOOLING_REPONAME}}
+  VOL_NONPROD_TOOLING_REPO_URL: ${{ secrets.VOL_NONPROD_TOOLING_ECR_REPO_URL }}
+  VOL_PROD_TOOLING_REPO_URL: ${{ secrets.VOL_PROD_TOOLING_ECR_REPO_URL }}
 
 # Permission can be added at job level or workflow level    
 permissions:
@@ -25,14 +26,14 @@ jobs:
     uses: ./.github/workflows/image-sign-validation.yaml
     secrets:
       aws_role_arn: ${{ secrets.DVSA_AWS_ROLE_SHAREDCORECR }}
-      ecr_tagged_image: ${AWS_ACCOUNT_ID_VOL_NP_TOOLING}.dkr.ecr.${AWS_REGION}.amazonaws.com/${VOL_NONPROD_TOOLING_REPO_NAME}:${{ github.event.inputs.vol_api_image_tag }}
+      ecr_tagged_image: ${VOL_NONPROD_TOOLING_REPO_URL}:${{ github.event.inputs.vol_api_image_tag }}
 
-  deploy-on-ephemral-cluster:
+  deploy-on-qa-cluster:
 
-    name: Deploy on Ephmeral Cluster
+    name: Deploy on QA Cluster
     runs-on: ubuntu-latest
     needs:
-    - build-test-push-sign-image
+    - validate-nonprod-vol-api-image
 
     steps:
   
@@ -62,129 +63,62 @@ jobs:
       #   #   inputs: {
       #   #     vol_api_image_tag: ${{ needs.build-test-push-sign-image.outputs.image_tag }}
       #   #   }
-      #   #   })  
+      #   #   })
+
+  qa-automation-tests:
+
+    name: Run QA Automation Tests
+    runs-on: ubuntu-latest
+    needs:
+    - deploy-on-qa-cluster
+
+    steps:
+
+    - name: Run automation tests
+       # if: github.ref == 'refs/heads/main'
+      run: |
+       echo 'Run automation tests'
   
-  # build-test-push-sign-image:
+  approve-image:
 
-  #   name: Build, Push & Sign Image
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #   - build
-  #   - unit-tests
-  #   - dockerfile-lint-check
+    name: PROD Approval For VOL Image
+    runs-on: ubuntu-latest
+    needs:
+    - qa-automation-tests
 
-  #   steps:
+    steps:
 
-  #   - name: Checkout the repository to this runner
-  #     uses: actions/checkout@v3
+    - name: Set VOL_API_IMAGE_TAG
+      # if: github.ref == 'refs/heads/main'
+      run: |
+        echo "VOL_API_IMAGE_TAG=${VOL_API_IMAGE_TAG}" >> $GITHUB_ENV
 
-  #   - name: Download VOL API artifact
-  #     uses: actions/download-artifact@v3.0.2
-  #     with:
-  #       name: Backend
-  #       path: ./
+    - name: Setup Notation CLI
+      uses: notaryproject/notation-action/setup@v1
+      with:
+        version: 1.0.0
 
-  #   - name: Set BASE_IMAGE & IMAGE_SHA
-  #     run: |
-  #       ls -la ./
-  #       envsubst < dockerfile | tee dockerfile.tmp
-  #       mv dockerfile.tmp dockerfile
-  #       echo "IMAGE_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-  #       BASE_IMAGE=$(head -n1 dockerfile)
-  #       echo "BASE_IMAGE=${BASE_IMAGE#* }" >> $GITHUB_ENV
+    - name: Configure AWS credentials on VOL Non Production Tooling ECR
+      uses: aws-actions/configure-aws-credentials@v4.0.1
+      with:
+        role-to-assume: ${{ secrets.VOL_AWS_ROLE_TOOLING_NONPROD }}
+        role-session-name: GitHub_to_AWS_via_FederatedOIDC
+        aws-region: ${{ vars.DVSA_AWS_REGION}}
 
-  #   - name: Set VOL_API_IMAGE_TAG at PR level
-  #     run: |
-  #       echo "VOL_API_IMAGE_TAG=pr-approved-vol-api-${BASE_IMAGE#*:}-$IMAGE_SHA" >> $GITHUB_ENV
-  #       echo "::set-output name=pr_image_tag::${VOL_API_IMAGE_TAG}"
+    - name: Login to ECR
+      id: login-ecr-vol-tooling-non-prod
+      uses: aws-actions/amazon-ecr-login@v2.0.1
 
-  #   - name: Set VOL_API_IMAGE_TAG at mainline
-  #     if: github.ref == 'refs/heads/main'
-  #     run: |
-  #       echo "VOL_API_IMAGE_TAG=approved-vol-api-${BASE_IMAGE#*:}-$IMAGE_SHA" >> $GITHUB_ENV
-  #       echo "::set-output name=main_image_tag::${VOL_API_IMAGE_TAG}"
+    - name: Tag & Push VOL API image as PROD Approved
+      # if: github.ref == 'refs/heads/main'
+      id: push-image
+      run: |
+        docker pull ${VOL_NONPROD_TOOLING_REPO_URL}:${{ github.event.inputs.vol_api_image_tag }}
+        docker tag ${VOL_NONPROD_TOOLING_REPO_URL}:${{ github.event.inputs.vol_api_image_tag }} ${VOL_PROD_TOOLING_REPO_URL}:${VOL_API_IMAGE_TAG}
+        docker push ${VOL_PROD_TOOLING_REPO_URL}:${VOL_API_IMAGE_TAG}
 
-  #   - name: Setup Notation CLI
-  #     uses: notaryproject/notation-action/setup@v1
-  #     with:
-  #       version: 1.0.0
-
-  #   - name: Set up Notation AWS Signer plugin
-  #     run: |
-  #       wget https://d2hvyiie56hcat.cloudfront.net/linux/amd64/installer/deb/latest/aws-signer-notation-cli_amd64.deb
-  #       sudo dpkg -i aws-signer-notation-cli_amd64.deb
-  #       notation version
-  #       notation plugin ls
-
-  #   - name: Configure AWS credentials on Shared Core ECR
-  #     uses: aws-actions/configure-aws-credentials@v4.0.1
-  #     with:
-  #       role-to-assume: ${{ secrets.DVSA_AWS_ROLE_SHAREDCORECR }}
-  #       role-session-name: GitHub_to_AWS_via_FederatedOIDC
-  #       aws-region: ${{ vars.DVSA_AWS_REGION }}
-
-  #   - name: Login to Shared Core ECR
-  #     id: login-ecr-sharedcoreecr
-  #     uses: aws-actions/amazon-ecr-login@v2.0.1
-
-  #   - name: Build VOL API image after verifying Base image
-  #     run: |
-  #       notation inspect $BASE_IMAGE
-  #       docker build -t ${AWS_ACCOUNT_ID_VOL_NP_TOOLING}.dkr.ecr.${AWS_REGION}.amazonaws.com/${VOL_NONPROD_TOOLING_REPO_NAME}:${VOL_API_IMAGE_TAG} \
-  #         --build-arg DVSA_AWS_SHAREDCOREECR_ID=${{secrets.DVSA_AWS_SHAREDCOREECR_ID}} .
-
-  #   - name: Snyk scan VOL API image
-  #     id: scan-api-image
-  #     uses: snyk/actions/docker@master
-  #     env:
-  #       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-  #     with:
-  #       image: ${AWS_ACCOUNT_ID_VOL_NP_TOOLING}.dkr.ecr.${AWS_REGION}.amazonaws.com/${VOL_NONPROD_TOOLING_REPO_NAME}:${VOL_API_IMAGE_TAG}
-  #       args: --file=dockerfile
-  #     continue-on-error: true
-
-  #   - name: Configure AWS credentials on Non Production VOL ECR
-  #     uses: aws-actions/configure-aws-credentials@v4.0.1
-  #     with:
-  #       role-to-assume: ${{ secrets.VOL_AWS_ROLE_TOOLING_NONPROD }}
-  #       role-session-name: GitHub_to_AWS_via_FederatedOIDC
-  #       aws-region: ${{ vars.DVSA_AWS_REGION}}
-
-  #   - name: Login to Non Production VOL ECR
-  #     id: login-ecr-vol-tooling-non-prod
-  #     uses: aws-actions/amazon-ecr-login@v2
-
-  #   - name: Push VOL API image
-  #     id: push-image
-  #     run: |
-  #       echo "image_tag=${VOL_API_IMAGE_TAG}" >> $GITHUB_OUTPUT
-  #       docker push ${AWS_ACCOUNT_ID_VOL_NP_TOOLING}.dkr.ecr.${AWS_REGION}.amazonaws.com/${VOL_NONPROD_TOOLING_REPO_NAME}:${VOL_API_IMAGE_TAG}
-
-  #   - name: Sign VOL API image
-  #     if: github.ref == 'refs/heads/main'
-  #     run: |
-  #       notation sign ${AWS_ACCOUNT_ID_VOL_NP_TOOLING}.dkr.ecr.${AWS_REGION}.amazonaws.com/${VOL_NONPROD_TOOLING_REPO_NAME}:${VOL_API_IMAGE_TAG} \
-  #         --plugin "com.amazonaws.signer.notation.plugin" --id "${{ secrets.DVSA_AWS_NONPRODVOLTOOLING_IMAGE_SIGNING_PROFILE }}"
-
-  #   # # - name: Deploy on Static environment
-  #   # #   if: github.event_name == 'pull_request' && github.event.label.name == 'cd ready'
-  #   # #   run: |
-  #   # #    echo 'Deployment in process...'
-  #   # #    sleep 10s
-  #   outputs:
-  #     image_tag: ${{ steps.push-image.outputs.image_tag }}
-  #     # main_image_tag: ${{ steps.main-image-tag.outputs.main_image_tag }}
-
-  # automation-tests:
-
-  #   name: Run Automation Tests
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #   - deploy-on-ephemral-cluster
-
-  #   steps:
-
-  #   - name: Run automation tests
-  #     if: github.event_name == 'pull_request' && github.event.label.name == 'cd ready'
-  #     run: |
-  #      echo 'Run automation tests'
+    - name: Sign VOL API image
+      # if: github.ref == 'refs/heads/main'
+      run: |
+        notation sign ${VOL_PROD_TOOLING_REPO_URL}:${VOL_API_IMAGE_TAG} \
+          --plugin "com.amazonaws.signer.notation.plugin" --id "${{ secrets.DVSA_AWS_NONPRODVOLTOOLING_IMAGE_SIGNING_PROFILE }}"
