--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -290,18 +290,26 @@ jobs:
       #   echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
       uses: actions/github-script@v6.4.1
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          await github.rest.actions.createWorkflowDispatch({
-            owner: 'dvsa',
-            repo: 'olcs-backend',
-            workflow_id: 'workflows/qa-vol-api-approval.yaml',
+          github.rest.actions.createWorkflowDispatch({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            workflow_id: 'qa-vol-api-approval.yml',
             ref: 'feature/AWSRESET1-514',
-            inputs: {
-              vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
-            },
-          });
-                  # script: |
+          })
+      # with:
+      #   github-token: ${{ secrets.GITHUB_TOKEN }}
+        # script: |
+        #   await github.rest.actions.createWorkflowDispatch({
+        #     owner: 'dvsa',
+        #     repo: 'olcs-backend',
+        #     workflow_id: 'workflows/qa-vol-api-approval.yaml',
+        #     ref: 'feature/AWSRESET1-514',
+        #     inputs: {
+        #       vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
+        #     },
+        #   });
+        # script: |
         #   await github.rest.actions.createWorkflowDispatch({
         #   owner: 'dvsa'
         #   repo: 'dvsa-container-registry',
