--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -294,9 +294,8 @@ jobs:
           github.rest.actions.createWorkflowDispatch({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            workflow_id: 'qa-vol-api-approval.yml',
+            workflow_id: 'qa-vol-api-approval.yaml',
             ref: 'feature/AWSRESET1-514',
-            
           })
       # with:
       #   github-token: ${{ secrets.GITHUB_TOKEN }}
