--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -239,49 +239,13 @@ jobs:
   #     run: |
   #      echo 'Run automation tests'
 
-  # deploy-on-non-prod-cluster:
+  deploy-on-non-prod-cluster:
 
-  #   name: Deploy on Non PROD Cluster
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #   - build-test-push-sign-image
-
-  #   steps:
-  
-  #   - name: Trigger workflow 'nonprod-vol-api-manual-cd'
-  #     # if: github.ref == 'refs/heads/main'
-  #     run: |
-  #       echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
-  #     # uses: actions/github-script@v6.4.1
-  #     # with:
-  #     #   github-token: ${{ secrets.GITHUB_TOKEN }}
-  #     #   script: |
-  #     #     await github.rest.actions.createWorkflowDispatch({
-  #     #       owner: 'dvsa',
-  #     #       repo: 'dvsa-container-registry',
-  #     #       workflow_id: 'workflows/nonprod-vol-api-manual-cd.yaml',
-  #     #       ref: 'feature/AWSRESET1-514',
-  #     #       inputs: {
-  #     #         vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
-  #     #       },
-  #     #     });
-  #     #             # script: |
-  #     #   #   await github.rest.actions.createWorkflowDispatch({
-  #     #   #   owner: 'dvsa'
-  #     #   #   repo: 'dvsa-container-registry',
-  #     #   #   workflow_id: 'nonprod-vol-api-manual-cd.yaml',
-  #     #   #   ref: 'feature/AWSRESET1-514'
-  #     #   #   inputs: {
-  #     #   #     vol_api_image_tag: ${{ needs.build-test-push-sign-image.outputs.image_tag }}
-  #     #   #   }
-  #     #   #   })
-
-  qa-artifact-approval:
-
-    name: QA VOL API Image Approval
+    name: Deploy on Non PROD Cluster
     runs-on: ubuntu-latest
     # needs:
-    # - deploy-on-non-prod-cluster
+    # - build-test-push-sign-image
+
     steps:
   
     - name: Trigger workflow 'nonprod-vol-api-manual-cd'
@@ -290,33 +254,69 @@ jobs:
       #   echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
       uses: actions/github-script@v6.4.1
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
         script: |
-          github.rest.actions.createWorkflowDispatch({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            workflow_id: 'qa-vol-api-approval.yaml',
+          await github.rest.actions.createWorkflowDispatch({
+            owner: 'dvsa',
+            repo: 'dvsa-container-registry',
+            workflow_id: 'workflows/nonprod-vol-api-manual-cd.yaml',
             ref: 'feature/AWSRESET1-514',
-          })
-      # with:
-      #   github-token: ${{ secrets.GITHUB_TOKEN }}
-        # script: |
-        #   await github.rest.actions.createWorkflowDispatch({
-        #     owner: 'dvsa',
-        #     repo: 'olcs-backend',
-        #     workflow_id: 'workflows/qa-vol-api-approval.yaml',
-        #     ref: 'feature/AWSRESET1-514',
-        #     inputs: {
-        #       vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
-        #     },
-        #   });
-        # script: |
-        #   await github.rest.actions.createWorkflowDispatch({
-        #   owner: 'dvsa'
-        #   repo: 'dvsa-container-registry',
-        #   workflow_id: 'nonprod-vol-api-manual-cd.yaml',
-        #   ref: 'feature/AWSRESET1-514'
-        #   inputs: {
-        #     vol_api_image_tag: ${{ needs.build-test-push-sign-image.outputs.image_tag }}
-        #   }
-        #   })
+            inputs: {
+              vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
+            },
+          });
+      #             # script: |
+      #   #   await github.rest.actions.createWorkflowDispatch({
+      #   #   owner: 'dvsa'
+      #   #   repo: 'dvsa-container-registry',
+      #   #   workflow_id: 'nonprod-vol-api-manual-cd.yaml',
+      #   #   ref: 'feature/AWSRESET1-514'
+      #   #   inputs: {
+      #   #     vol_api_image_tag: ${{ needs.build-test-push-sign-image.outputs.image_tag }}
+      #   #   }
+      #   #   })
+
+  # qa-artifact-approval:
+
+  #   name: QA VOL API Image Approval
+  #   runs-on: ubuntu-latest
+  #   # needs:
+  #   # - deploy-on-non-prod-cluster
+  #   steps:
+  
+  #   - name: Trigger workflow 'nonprod-vol-api-manual-cd'
+  #     # if: github.ref == 'refs/heads/main'
+  #     # run: |
+  #     #   echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
+  #     uses: actions/github-script@v6.4.1
+  #     with:
+  #       github-token: ${{ secrets.GITHUB_TOKEN }}
+  #       script: |
+  #         github.rest.actions.createWorkflowDispatch({
+  #           owner: context.repo.owner,
+  #           repo: context.repo.repo,
+  #           workflow_id: 'qa-vol-api-approval.yaml',
+  #           ref: 'feature/AWSRESET1-514',
+  #         })
+  #     # with:
+  #     #   github-token: ${{ secrets.GITHUB_TOKEN }}
+  #       # script: |
+  #       #   await github.rest.actions.createWorkflowDispatch({
+  #       #     owner: 'dvsa',
+  #       #     repo: 'olcs-backend',
+  #       #     workflow_id: 'workflows/qa-vol-api-approval.yaml',
+  #       #     ref: 'feature/AWSRESET1-514',
+  #       #     inputs: {
+  #       #       vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
+  #       #     },
+  #       #   });
+  #       # script: |
+  #       #   await github.rest.actions.createWorkflowDispatch({
+  #       #   owner: 'dvsa'
+  #       #   repo: 'dvsa-container-registry',
+  #       #   workflow_id: 'nonprod-vol-api-manual-cd.yaml',
+  #       #   ref: 'feature/AWSRESET1-514'
+  #       #   inputs: {
+  #       #     vol_api_image_tag: ${{ needs.build-test-push-sign-image.outputs.image_tag }}
+  #       #   }
+  #       #   })
