AWSRESET1-514: CI/CD Vol API on Static & DEV

--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -259,7 +259,7 @@ jobs:
           await github.rest.actions.createWorkflowDispatch({
             owner: 'dvsa',
             repo: 'dvsa-container-registry',
-            workflow_id: 'nonprod-vol-api-manual-cd.yaml',
+            workflow_id: '.github/workflows/nonprod-vol-api-manual-cd.yaml',
             ref: 'feature/AWSRESET1-514',
             inputs: {
               vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
