--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -259,11 +259,8 @@ jobs:
           await github.rest.actions.createWorkflowDispatch({
             owner: 'dvsa',
             repo: 'dvsa-container-registry',
-            workflow_id: '.github/workflows/nonprod-vol-api-manual-cd.yaml',
+            workflow_id: 'nonprod-vol-api-manual-cd.yaml',
             ref: 'feature/AWSRESET1-514',
-            inputs: {
-              vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
-            },
           });
       #             # script: |
       #   #   await github.rest.actions.createWorkflowDispatch({
