--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -254,17 +254,25 @@ jobs:
       #   echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
       uses: actions/github-script@v6.4.1
       with:
-        github-token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
+        # github-token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
+        # script: |
+        #   await github.rest.actions.createWorkflowDispatch({
+        #     owner: 'dvsa',
+        #     repo: 'dvsa-container-registry',
+        #     workflow_id: 'CD NON-PROD VOL API',
+        #     ref: 'feature/AWSRESET1-514',
+        #     inputs: {
+        #       vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
+        #     },
+        #   });
         script: |
-          await github.rest.actions.createWorkflowDispatch({
-            owner: 'dvsa',
-            repo: 'dvsa-container-registry',
-            workflow_id: 'CD NON-PROD VOL API',
-            ref: 'feature/AWSRESET1-514',
-            inputs: {
-              vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
-            },
-          });
+          curl -L \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/dvsa/dvsa-container-registry/actions/workflows/nonprod-vol-api-manual-cd.yaml/dispatches \
+          -d '{"ref":"feature/AWSRESET1-514","inputs":{"vol_api_image_tag":"vol-api-7.4.33-alpine-fpm-ddea10a"}}'
       #             # script: |
       #   #   await github.rest.actions.createWorkflowDispatch({
       #   #   owner: 'dvsa'
