--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -16,8 +16,8 @@ env:
 
 # Permission can be added at job level or workflow level    
 permissions:
-      id-token: write   # This is required for requesting the JWT
-      contents: read    # This is required for actions/checkout
+  id-token: write   # This is required for requesting the JWT
+  contents: read    # This is required for actions/checkout
 
 jobs:
 
@@ -290,6 +290,9 @@ jobs:
     runs-on: ubuntu-latest
     # needs:
     # - deploy-on-non-prod-cluster
+    permissions:
+      issues: write
+      pull-requests: write
     steps:
   
     - name: Trigger workflow 'nonprod-vol-api-manual-cd'
