--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -290,9 +290,7 @@ jobs:
     runs-on: ubuntu-latest
     # needs:
     # - deploy-on-non-prod-cluster
-    permissions:
-      issues: write
-      pull-requests: write
+    permissions: read-all
     steps:
   
     - name: Trigger workflow 'nonprod-vol-api-manual-cd'
