--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -18,6 +18,9 @@ env:
 permissions:
   id-token: write   # This is required for requesting the JWT
   contents: read    # This is required for actions/checkout
+  # contents: write
+  pull-requests: write
+  repository-projects: write
 
 jobs:
 
@@ -290,7 +293,7 @@ jobs:
     runs-on: ubuntu-latest
     # needs:
     # - deploy-on-non-prod-cluster
-    permissions: read-all
+    # permissions: read-all
     steps:
   
     - name: Trigger workflow 'nonprod-vol-api-manual-cd'
