--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -304,7 +304,7 @@ jobs:
         script: |
           github.rest.actions.createWorkflowDispatch({
             owner: 'dvsa',
-            repo: olcs-backend,
+            repo: 'olcs-backend',
             workflow_id: 'qa-vol-api-approval.yaml',
             ref: 'feature/AWSRESET1-514',
           })
