AWSRESET1-514: CI/CD Vol API on Static & DEV

--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -267,8 +267,8 @@ jobs:
         #       vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
         #     },
         #   })
-      # env:
-      #   GITHUB_TOKEN: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # github-token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
         # script: |
         #   await github.rest.actions.createWorkflowDispatch({
