AWSRESET1-514: CI/CD Vol API on Static & DEV

--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -309,7 +309,7 @@ jobs:
       # if: github.event_name == 'pull_request'
       uses: ./.github/workflows/trigger-github-workflow.yaml
       secrets:
-        github_token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
+        gh_token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
 
   # qa-artifact-approval:
 
