AWSRESET1-514: CI/CD Vol API on Static & DEV

--- a/.github/workflows/trigger-github-workflow.yaml
+++ b/.github/workflows/trigger-github-workflow.yaml
@@ -15,23 +15,7 @@ jobs:
 
     steps:
 
-    - name: Trigger workflow
-      # uses: actions/github-script@v6
-      # with:
-      #   script: |
-      #     await github.rest.actions.createWorkflowDispatch({
-      #       owner: context.repo.owner,
-      #       repo: 'dvsa-container-registry',
-      #       workflow_id: 'nonprod-vol-api-manual-cd.yaml',
-      #       ref: 'feature/AWSRESET1-514',
-      #       inputs: {
-      #         vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
-      #       },
-      #     })
-        # wait-interval: 10
-      # if: github.ref == 'refs/heads/main'
-      # run: |
-      #   echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
+    - name: Trigger Workflow
       run: |
         gh workflow run 'CD NON-PROD VOL API' \
           -R dvsa/dvsa-container-registry \
@@ -39,3 +23,8 @@ jobs:
           -f vol_api_image_tag=vol-api-7.4.33-alpine-fpm-ddea10a
       env:
         GITHUB_TOKEN: ${{ secrets.gh_token }}
+    
+    - name: Monitor Workflow Execution Progress
+      run: |
+        runID=`gh run list --workflow=nonprod-vol-api-manual-cd.yaml -R dvsa/dvsa-container-registry | sed -n 1p | awk '{ print $(NF-2) }'`
+        gh run watch $runID -i1
